Fix find page navbar layout bug

--- a/public/stylesheets/find.css
+++ b/public/stylesheets/find.css
@@ -65,7 +65,7 @@ a:hover{
     margin-right: 30px;
 }
 
-h3{
+.browse-users {
     position:relative;
     text-decoration: none;
     font-size: 25px;
